static/css/post.css
article .img-wrapper, article .img-wrapper img {
  max-width: 100%;
  margin-bottom: 40px;
}

article .img-wrapper img {
  display: block;
  margin: 20px auto;
}

article .img-wrapper figcaption {
  text-align: center;
  font-style: italic;
}

article blockquote {
  background: #607d8b;
  margin: 0;
  padding: 5px 20px;
  border-radius: 2px;
  color: white;
}

article a {
  color: rgb(2, 180, 95);
}

article a:hover {
  color: rgb(96, 210, 156);
}

@media (max-width: 750px) {
  article .img-wrapper {
    width: 100%;
    margin: 0 0 40px 0;
  }

  article .img-wrapper img {
    display: block;
    margin: 20px 0;
  }
}

